tests/error/runtime_error_recursion_limit/identity.nim
func identity*(n: int): int =
  identity(n)
